modify video code

--- a/agi.html
+++ b/agi.html
@@ -17,7 +17,7 @@
           <td><img src = "agi.jpg" width = "500" height = "800"  alt = "아기가 아파" title = "아기야 아프니?ㅠㅠ 아갸!!"></td><td><img src = "pill.png" width = "500" height = "800"  alt = "약사진" title = "아기야 약바르자!"></td>
         </tr>
         <tr>
-          <td colspan = "2"><video src = "mangdak.mp4" controls></td>
+          <td colspan = "2"><video id "myVideo" src = "mangdak.mp4" controls autoplay></td>
         </tr>
       </tbody>
     </table>
