--- a/agi.html
+++ b/agi.html
@@ -5,7 +5,7 @@
     <title>아픈 아기를 위해...</title>
   </head>
   <body>
-    <center><h1><strong><mark><span style = "color:blue">아기야 아프지마렴 ㅠㅠ</span></mark></strong></h1>
+    <center><h1><strong><mark><span style = "color:blue">아기야 아프지마렴 ㅠㅠ 제발 ㅠㅠ</span></mark></strong></h1>
     <center><table border = "1">
       <thead>
       <tr>
